# TrackSuite.work

./: .gitignore  DEPLOYMENT.md  HOTKEYS.md  LICENSE  README.md  deploy_backend.sh  logo.xcf  logo_light.xcf  run.sh  setup_env.sh  uninstall_backend.sh
app_server/: __init__.py  main.py  models.py  work-time-backend.service
apt/: index.html  tracksuite-work.asc
backend/: DEPLOYMENT.md  deploy.sh  requirements.txt  uninstall.sh  work-time-backend.service
backend/app_server/: __init__.py  auth.py  main.py  models.py
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: autostart.rs  db.rs  main.rs  notification.rs  push_sync.rs  suspend.rs  sync_api.rs
packaging/apt/: README.md  apt-ftparchive.conf  index.template.html
packaging/linux/: cargo-sources.json  com.tracksuite-work.desktop.metainfo.xml  com.tracksuite-work.desktop.yml  com.tracksuite.work.desktop.deb.metainfo.xml  generate-sources.sh  (+2 more)
scripts/: diagnose_bad_hours.py  fix_corrupt_end_time.py  fix_resurrected_shifts.py  restore_from_server.py
tests/: conftest.py  test_config.py  test_deploy_configs.py  test_desktop_features.py  test_sync.py  test_tauri_scaffold.py
website/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
work_time_app/: __init__.py  cli.py  database.py  indicator.py  main.py  notifications.py  suspend_handler.py  sync.py
(+34 files in other folders)
